--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -98,30 +98,51 @@
 
           <div class="form-group">
             <%= f.label :country, "Country" %>
-            <%= f.select :country, [['Select Country', nil], ['United States', 'United States']], {}, class: "form-control" %>
+            <%= f.select :country, [['United States', 'United States']], {}, class: "form-control", selected: current_user.country %>
           </div>
 
           <div class="form-group">
             <%= f.label :state, "State" %>
-            <%= f.select :state, render("list_of_states"), {}, class: "form-control" %>
-          </div>
+            <% state_class = 'form-control' %>
+            <% state_class << ' is-invalid' if resource.errors.include?(:state) %>
+            <%= f.select :state, options_for_select(us_states, selected: current_user.state), {}, class: state_class %>
 
+            <% if resource.errors.include?(:state) %>
+              <% resource.errors.full_messages_for(:state).each do |message| %>
+                <div class="invalid-feedback">
+                  <%= message %>
+                </div>
+              <% end %>
+            <% end %>
+          </div>
 
           <div class="form-group">
             <%= f.label :city, "City" %>
-            <%= f.text_field :city, class: "form-control" %>
+            <%= f.text_field :city, class: "form-control#{' is-invalid' if resource.errors.include?(:city)}", value: current_user.city %>
+            <% if resource.errors.include?(:city) %>
+              <% resource.errors.full_messages_for(:city).each do |message| %>
+                <div class="invalid-feedback">
+                  <%= message %>
+                </div>
+              <% end %>
+            <% end %>
           </div>
-
-          <hr class="mt-4">
 
           <div class="form-group">
             <%= f.label :name, "First Name" %>
-            <%= f.text_field :name, class: "form-control", :placeholder => "Enter your First Name" %>
+            <%= f.text_field :name, class: "form-control#{' is-invalid' if resource.errors.include?(:name)}", placeholder: "Enter your First Name", value: current_user.name %>
+            <% if resource.errors.include?(:name) %>
+              <% resource.errors.full_messages_for(:name).each do |message| %>
+                <div class="invalid-feedback">
+                  <%= message %>
+                </div>
+              <% end %>
+            <% end %>
           </div>
 
           <div class="form-group">
             <%= f.label :bio, "Bio" %>
-            <%= f.text_area :bio, class: "form-control", :placeholder => "This field is not required" %>
+            <%= f.text_area :bio, class: "form-control", value: current_user.bio %>
           </div>
 
           <hr class="mt-4">
