--- a/app/views/dashboard/dashboard.html.erb
+++ b/app/views/dashboard/dashboard.html.erb
@@ -5,7 +5,7 @@
 <div class="row">
   <div class="col">
     <div class="card mx-auto mb-3" style="max-width: 500px;">
-      <img src="<%= current_user.avatar %>" class="img-fluid img-thumbnail rounded float-start" alt="Profile image" style="max-width: 500px;">
+      <%= image_tag current_user.avatar.url class: "img-fluid img-thumbnail rounded float-start", alt: "Profile image", style: "max-width: 500px;" %>
     </div>
   </div>
   <div class="col">
