--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -3,13 +3,14 @@
     <div class="col-6 mx-auto">
       <h1>Singles</h1>
       <h2 class="text-center">Resend Confirmation Instructions</h2>
+    </div>
 
       <%= simple_form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post, class: "form-horizontal" }) do |f| %>
         <%= f.error_notification %>
         <%= f.full_error :confirmation_token %>
 
         <div class="form-group">
-          <%= f.label "Enter your email", class: "mb-2" %>
+          <%= f.label :email, "Enter your email", class: "mb-2" %>
           <%= f.email_field :email, required: true, autofocus: true, value: (resource.pending_reconfirmation? ? resource.unconfirmed_email : resource.email), class: "form-control" %>
         </div>
         <div class="form-group">
@@ -17,6 +18,6 @@
         </div>
       <% end %>
       <%= render "devise/shared/links" %>
-    </div>
+
   </div>
 </div>
