--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -3,12 +3,12 @@
     <div class="col-6 mx-auto">
       <h1>Singles</h1>
       <h2 class="text-center">Forgot your password?</h2>
-
+    </div>
       <%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post, class: "form-horizontal" }) do |f| %>
         <%= f.error_notification %>
 
         <div class="form-group">
-          <%= f.label "Enter your email", class: "mb-2" %>
+          <%= f.label :email, "Enter your email", class: "mb-2" %>
           <%= f.email_field :email, required: true, autofocus: true, autocomplete: "email", class: "form-control" %>
         </div>
 
@@ -20,6 +20,6 @@
       <% end %>
 
       <%= render "devise/shared/links" %>
-    </div>
+
   </div>
 </div>
