--- a/app/views/favorites/index.html.erb
+++ b/app/views/favorites/index.html.erb
@@ -1,14 +1,32 @@
 <% provide(:title, "Favorites") %>
 <% content_for :h1, 'My favorites' %>
-<div class="container">
-<div id="favorites">
-  <% @favorites.each do |favorite| %>
-    <%= render favorite %>
-    <p>
-      <%= link_to "Show this favorite", favorite %>
-    </p>
-  <% end %>
-</div>
 
-<%= link_to "New favorite", new_favorite_path %>
+<div class="container mt-4">
+  <% @favorites.each do |favorite| %>
+    <div class="row mb-2" id="<%= dom_id(favorite) %>">
+      <div class="col-8 mx-auto">
+        <div class="card">
+          <div class="card-body d-flex align-items-center">
+            <%= link_to profile_path(favorite.liked_user), class: "text-decoration-none" do %>
+              <img src="<%= favorite.liked_user.avatar %>" class="rounded-circle me-2" style="width: 50px; height: 50px;" alt="User Avatar">
+              <span><%= favorite.liked_user.name.capitalize %></span>
+            <% end %>
+            <div class="ms-auto">
+              <%= link_to send_message_to_profile_path(favorite.liked_user.id), class: "btn btn-outline-primary btn-sm" do %>
+                <i class="fa-solid fa-message"></i> Message
+              <% end %>
+              <%= link_to profile_path(favorite.liked_user), class: "btn btn-outline-secondary btn-sm" do %>
+                <i class="fa-solid fa-user"></i> Profile
+              <% end %>
+              <%= link_to favorite_path(favorite), method: :delete, data: { turbo_method: :delete }, class: "btn btn-outline-danger btn-sm" do %>
+                <i class="fa-solid fa-heart-crack"></i> Unlike
+              <% end %>
+
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  <% end %>
+  <%= will_paginate @favorites, class: 'pagination justify-content-center' %>
 </div>
