--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -40,6 +40,14 @@
         <% end %>
       <% end %>
 
+      <%= turbo_frame_tag "like_button" do %>
+        <% if Favorite.exists?(liking_user: current_user, liked_user: @user) %>
+          <%= render 'profiles/unlike_button', user: @user %>
+        <% else %>
+          <%= render 'profiles/like_button', user: @user %>
+        <% end %>
+      <% end %>
+
       <%= link_to 'Back', '#', class: "btn btn-outline-primary mb-3 mt-5 col-3 mx-auto d-md-block", onclick: "event.preventDefault(); history.back();" %>
     </div>
   </div>
