--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -14,7 +14,7 @@
   <%= form.hidden_field :chat_id %>
 
   <div class="chat-input-container">
-    <%= form.text_area :content, rows: 1, class: "chat-textarea", placeholder: "Type your message here...", required: true, autofocus: true %>
+    <%= form.text_area :content, rows: 1, class: "chat-textarea", placeholder: "Type your message here...", required: true %>
     <button type="submit" class="send-button">
       <i class="fa-regular fa-paper-plane"></i>
     </button>
