--- a/app/views/layouts/custom.html.erb
+++ b/app/views/layouts/custom.html.erb
@@ -23,7 +23,7 @@
   <h1 id="main_h1"><%= yield :h1 %></h1>
 </div>
 
-<div class="container">
+<div class="container pb-3">
   <% if notice.present? %>
     <%= render partial: "shared/flash", locals: { message: notice, css_class: "success" } %>
   <% end %>
