some changes to admin interface

--- a/app/views/admin/admin_panel.html.erb
+++ b/app/views/admin/admin_panel.html.erb
@@ -17,7 +17,7 @@
               <%= link_to profile_path(user), class: "btn btn-outline-secondary btn-sm" do %>
                 <i class="fa-solid fa-user"></i> Profile
               <% end %>
-              <%= link_to user_full_info_path(user), class: "btn btn-outline-danger btn-sm" do %>
+              <%= link_to user_full_info_path(user), class: "btn btn-outline-success btn-sm" do %>
                 <i class="fa-regular fa-address-card"></i> Info
               <% end %>
 
