--- a/app/views/admin/show.html.erb
+++ b/app/views/admin/show.html.erb
@@ -27,7 +27,7 @@
       <%= link_to liked_admin_path, class: "btn btn-outline-warning btn-sm" do %>
         <i class="fa-solid fa-message"></i> Liked by
       <% end %>
-      <%= link_to delete_user_path(@user), data: { turbo_method: :delete, turbo_confirm: 'Are you sure you want to delete this chat?' }, class: "btn btn-outline-danger btn-sm" do %>
+      <%= link_to delete_user_path(@user), data: { turbo_method: :delete, turbo_confirm: 'Are you sure you want to delete this chat?' }, class: "btn btn-outline-danger mt-4 mb-4 col-6 mx-auto" do %>
         <i class="fa-solid fa-circle-xmark"></i> Delete User
       <% end %>
     </div>
@@ -39,23 +39,71 @@
     <h3>Info</h3>
   </div>
   <div class="card-body">
-    <p>user_id: <%= @user.id %></p>
-    <p>username: <%= @user.username %></p>
-    <p>Name: <%= @user.name %></p>
-    <p>Email: <%= @user.email %></p>
-    <hr>
-    <p>Gender: <%= @user.gender %></p>
-    <p>Country: <%= @user.country %></p>
-    <p>State: <%= @user.state %></p>
-    <p>City: <%= @user.city %></p>
-    <p>Bio: <%= @user.bio %></p>
-    <p>Date of Birth: <%= @user.dob %></p>
-    <hr>
-    <p>created_at: <%= @user.created_at %></p>
-    <p>updated_at: <%= @user.updated_at %></p>
-    <p>confirmed_at: <%= @user.confirmed_at %></p>
-    <p>confirmation_sent_at: <%= @user.confirmation_sent_at %></p>
-    <p>unconfirmed_email: <%= @user.unconfirmed_email %></p>
+
+    <table class="table table-dark table-striped table-sm">
+      <tbody>
+      <tr>
+        <th scope="row">user_id</th>
+        <td><%= @user.id %></td>
+      </tr>
+      <tr>
+        <th scope="row">username</th>
+        <td><%= @user.username %></td>
+      </tr>
+      <tr>
+        <th scope="row">Name</th>
+        <td><%= @user.name %></td>
+      </tr>
+      <tr>
+        <th scope="row">Email</th>
+        <td><%= @user.email %></td>
+      </tr>
+      <tr>
+        <th scope="row">Gender</th>
+        <td><%= @user.gender %></td>
+      </tr>
+      <tr>
+        <th scope="row">Country</th>
+        <td><%= @user.country %></td>
+      </tr>
+      <tr>
+        <th scope="row">State</th>
+        <td><%= @user.state %></td>
+      </tr>
+      <tr>
+        <th scope="row">City</th>
+        <td><%= @user.city %></td>
+      </tr>
+      <tr>
+        <th scope="row">Bio</th>
+        <td><%= @user.bio %></td>
+      </tr>
+      <tr>
+        <th scope="row">Date of Birth</th>
+        <td><%= @user.dob %></td>
+      </tr>
+      <tr>
+        <th scope="row">created_at</th>
+        <td><%= @user.created_at %></td>
+      </tr>
+      <tr>
+        <th scope="row">updated_at</th>
+        <td><%= @user.updated_at %></td>
+      </tr>
+      <tr>
+        <th scope="row">confirmed_at</th>
+        <td><%= @user.confirmed_at %></td>
+      </tr>
+      <tr>
+        <th scope="row">confirmation_sent_at</th>
+        <td><%= @user.confirmation_sent_at %></td>
+      </tr>
+      <tr>
+        <th scope="row">unconfirmed_email</th>
+        <td><%= @user.unconfirmed_email %></td>
+      </tr>
+      </tbody>
+    </table>
   </div>
 </div>
 
