--- a/app/views/admin/blocked.html.erb
+++ b/app/views/admin/blocked.html.erb
@@ -1,6 +1,20 @@
 <% provide(:title, "Blocked") %>
-<% content_for :h1, 'Blocked' %>
+<% content_for :h1, "#{@user.name.capitalize} is blocked by" %>
 
+<div class="container mt-4">
 <% @blocked_by.each do |block| %>
-  <p>Block ID: <%= block.id %>, Blocker: <%= block.blocker_id %>, Blocked: <%= block.blocked_id %></p>
+  <div class="row mb-2" id="<%= dom_id(block.blocker) %>">
+    <div class="col-8 mx-auto">
+      <div class="card">
+        <div class="card-body d-flex align-items-center">
+          <%= link_to profile_path(block.blocker), class: "text-decoration-none" do %>
+            <img src="<%= block.blocker.avatar %>" class="rounded-circle me-2" style="width: 50px; height: 50px;" alt="User Avatar">
+            <span><%= block.blocker.name.capitalize %></span>
+          <% end %>
+        </div>
+      </div>
+    </div>
+  </div>
 <% end %>
+  <%= will_paginate @blocked_by, class: 'pagination justify-content-center' %>
+</div>
