--- a/app/views/admin/blocks.html.erb
+++ b/app/views/admin/blocks.html.erb
@@ -1,6 +1,21 @@
 <% provide(:title, "Blocks") %>
-<% content_for :h1, 'Blocks' %>
+<% content_for :h1, "#{@user.name.capitalize} blocked these users" %>
 
-<% @blocker_to.each do |block| %>
-  <p>Block ID: <%= block.id %>, Blocker: <%= block.blocker_id %>, Blocked: <%= block.blocked_id %></p>
-<% end %>
+<div class="container mt-4">
+  <% @blocker_to.each do |block| %>
+    <div class="row mb-2" id="<%= dom_id(block.blocked) %>">
+      <div class="col-8 mx-auto">
+        <div class="card">
+          <div class="card-body d-flex align-items-center">
+            <%= link_to profile_path(block.blocked), class: "text-decoration-none" do %>
+              <img src="<%= block.blocked.avatar %>" class="rounded-circle me-2" style="width: 50px; height: 50px;" alt="User Avatar">
+              <span><%= block.blocked.name.capitalize %></span>
+            <% end %>
+          </div>
+        </div>
+      </div>
+    </div>
+  <% end %>
+  <%= will_paginate @blocker_to, class: 'pagination justify-content-center' %>
+</div>
+
