--- a/app/views/admin/show.html.erb
+++ b/app/views/admin/show.html.erb
@@ -27,7 +27,7 @@
       <%= link_to liked_admin_path, class: "btn btn-outline-warning btn-sm" do %>
         <i class="fa-solid fa-message"></i> Liked by
       <% end %>
-      <%= link_to delete_user_path(@user), data: { turbo_method: :delete, turbo_confirm: 'Are you sure you want to delete this chat?' }, class: "btn btn-outline-danger mt-4 mb-4 col-6 mx-auto" do %>
+      <%= link_to delete_user_path(@user), data: { turbo_method: :delete, turbo_confirm: 'Are you sure you want to delete this user?' }, class: "btn btn-outline-danger mt-4 mb-4 col-6 mx-auto" do %>
         <i class="fa-solid fa-circle-xmark"></i> Delete User
       <% end %>
     </div>
