added back buttons to chats and blocks in admin views

--- a/app/views/admin/blocked.html.erb
+++ b/app/views/admin/blocked.html.erb
@@ -1,8 +1,10 @@
 <% provide(:title, "Blocked") %>
 <% content_for :h1, "#{@user.name.capitalize} is blocked by" %>
 
+<%= link_to 'Back to user info', user_full_info_path(@user), class: 'btn btn-outline-primary mb-2' %>
+
 <div class="container mt-4">
-<% @blocked_by.each do |block| %>
+  <% @blocked_by.each do |block| %>
   <div class="row mb-2" id="<%= dom_id(block.blocker) %>">
     <div class="col-8 mx-auto">
       <div class="card">
