--- a/app/views/admin/user_info.html.erb
+++ b/app/views/admin/user_info.html.erb
@@ -1,4 +1,4 @@
-<% provide(:title, "#{@user.name.capitalize} info") %>
+<% provide(:title, "#{@user.name.capitalize}'s info".html_safe) %>
 
 <div class="card col-12 mx-auto mb-2">
   <div class="card-header d-flex justify-content-between align-items-center">
