implemented online status for users in chats

--- a/app/views/chats/index.html.erb
+++ b/app/views/chats/index.html.erb
@@ -17,11 +17,18 @@
               <% last_message = chat.messages.last %>
 
               <%= link_to "chats/#{chat.id}", class: 'd-flex align-items-center text-decoration-none flex-grow-1' do %>
+
+                <div class="profile-container">
                 <% if chat_link && chat_link.avatar.present? %>
                   <%= image_tag chat_link.avatar.url, class: 'rounded-circle', width: 50, height: 50 %>
+                    <% if chat_link.online? %>
+                      <i class="fa-solid fa-circle fa-beat-fade status-icon" style="color: #08f750;"></i>
+                    <% end %>
                 <% else %>
                   <img src="default_avatar.jpg" class="rounded-circle" width="50" height="50">
                 <% end %>
+                </div>
+
                 <div class="ms-3 d-flex flex-column">
                   <% if chat_link %>
                     <h5 class="mb-1 text-dark flex-grow-1 text-truncate"><%= chat_link.name.capitalize %></h5>
