--- a/app/views/chats/show.html.erb
+++ b/app/views/chats/show.html.erb
@@ -24,10 +24,20 @@
 
       <div class="d-flex flex-grow-1 justify-content-center align-items-center">
         <% if current_user == @chat.sender %>
+          <div class="profile-container">
           <%= link_to image_tag(@chat.receiver.avatar.url, class: 'rounded-circle', width: 40, height: 40), "/profiles/#{@chat.receiver_id}" %>&nbsp;
+          <% if @chat.receiver.online? %>
+            <i class="fa-solid fa-circle fa-beat-fade status-icon" style="color: #08f750;"></i>
+          <% end %>
+          </div>
           <h4 class="mb-0"><%= "Chat with #{@chat.receiver.name.capitalize}" %></h4>
         <% else %>
+          <div class="profile-container">
           <%= link_to image_tag(@chat.sender.avatar.url, class: 'rounded-circle', width: 40, height: 40), "/profiles/#{@chat.sender_id}" %>&nbsp;
+          <% if @chat.sender.online? %>
+            <i class="fa-solid fa-circle fa-beat-fade status-icon" style="color: #08f750;"></i>
+          <% end %>
+          </div>
           <h4 class="mb-0"><%= "Chat with #{@chat.sender.name.capitalize}" %></h4>
         <% end %>
       </div>
@@ -38,8 +48,7 @@
           <li id="message_<%= message.id %>" class="px-2" style="margin-bottom: 5px;">
             <div class="d-flex align-items-start">
               <!-- Avatar with original size -->
-              <%= link_to image_tag(message.author.avatar.url, class: 'rounded-circle', width: 40, height: 40), "/profiles/#{message.author.id}" %>
-
+                <%= link_to image_tag(message.author.avatar.url, class: 'rounded-circle', width: 40, height: 40), "/profiles/#{message.author.id}" %>
               <!-- Message Content with Delete Button aligned to first line -->
               <div class="flex-grow-1 ms-2" style="width: calc(100% - 50px);"> <!-- Adjust width as necessary -->
                 <!-- Message Box -->
