--- a/app/views/chats/index.html.erb
+++ b/app/views/chats/index.html.erb
@@ -1,7 +1,7 @@
 <% provide(:title, "Chats") %>
 <% content_for :h1, 'My Chats' %>
 
-<%= stylesheet_link_tag "chats" %>
+<%#= stylesheet_link_tag "chats" %>
 
 <div class="container mt-4">
   <div class="row justify-content-center">
