--- a/app/views/admin/chats_index.html.erb
+++ b/app/views/admin/chats_index.html.erb
@@ -5,7 +5,7 @@
   <div class="row justify-content-center">
     <div class="col-md-8">
       <div class="list-group shadow-sm">
-        <%= link_to 'Back to user info', user_full_info_path(@user), class: 'btn btn-outline-primary me-auto mb-2' %>
+        <%= link_to 'Back to user info', "#", class: 'btn btn-outline-primary me-auto mb-2', onclick: "event.preventDefault(); history.back();" %>
         <% if @chats.empty? %>
           <p class="text-center">There are no chats yet.</p>
         <% else %>
