--- a/app/views/admin/chats_show.html.erb
+++ b/app/views/admin/chats_show.html.erb
@@ -4,7 +4,7 @@
 <div class="container my-4">
   <div class="card" style="height: calc(100vh - 150px);">
     <div class="card-header d-flex justify-content-between align-items-center">
-      <%= link_to 'Back to chats', chats_admin_path(@user), class: 'btn btn-outline-primary me-auto' %>
+      <%= link_to 'Back to chats', "#", class: 'btn btn-outline-primary me-auto', onclick: "event.preventDefault(); history.back();" %>
 
       <div class="d-flex flex-grow-1 justify-content-center align-items-center">
         <% if @user == @chat.sender %>
