--- a/app/views/admin/liked.html.erb
+++ b/app/views/admin/liked.html.erb
@@ -1,7 +1,7 @@
 <% provide(:title, "Liked by") %>
 <% content_for :h1, "#{@user.name.capitalize} liked by these users" %>
 
-<%= link_to 'Back to user info', user_full_info_path(@user), class: 'btn btn-outline-primary me-auto' %>
+<%= link_to 'Back to user info', "#", class: 'btn btn-outline-primary me-auto', onclick: "event.preventDefault(); history.back();" %>
 
 <div class="container mt-4">
   <% @liked_by.each do |favorite| %>
