--- a/app/views/admin/user_info.html.erb
+++ b/app/views/admin/user_info.html.erb
@@ -2,7 +2,7 @@
 
 <div class="card col-12 mx-auto mb-2">
   <div class="card-header d-flex justify-content-between align-items-center">
-    <%= link_to 'Back to admin panel', admin_panel_path, class: 'btn btn-outline-primary me-auto' %>
+    <%= link_to 'Back to admin panel', "#", class: 'btn btn-outline-primary me-auto', onclick: "event.preventDefault(); history.back();" %>
     <div class="d-flex flex-grow-1 justify-content-center align-items-center">
       <h3><%= @user.name.capitalize %></h3>
     </div>
