--- a/app/views/chats/show.html.erb
+++ b/app/views/chats/show.html.erb
@@ -7,11 +7,10 @@
             }
         }
     });
+
 </script>
 
 <style>
-
-
     @keyframes shake {
         0%, 100% { transform: rotate(0deg); }
         10% { transform: rotate(12deg); }
@@ -25,7 +24,6 @@
         animation: shake 0.5s; /* Adjust duration as needed */
         animation-iteration-count: infinite;
     }
-
 </style>
 
 <% if current_user == @chat.sender %>
@@ -37,7 +35,7 @@
 <div class="container my-4">
   <div class="card" style="height: calc(100vh - 150px);">
     <div class="card-header d-flex justify-content-between align-items-center">
-      <%= link_to 'Back to chats', chats_path, class: 'btn btn-outline-primary me-auto' %>
+      <%= link_to 'Back to chats', "#", class: 'btn btn-outline-primary me-auto', id: 'back-button', onclick: "event.preventDefault(); history.back();" %>
 
       <div class="d-flex flex-grow-1 justify-content-center align-items-center">
         <% if current_user == @chat.sender %>
