--- a/app/views/chats/show.html.erb
+++ b/app/views/chats/show.html.erb
@@ -74,7 +74,7 @@
           <h4 class="mb-0"><%= "Chat with #{@chat.sender.name.capitalize}" %></h4>
         <% else %>
           <div class="profile-container">
-            <%= link_to image_tag(@chat.receiver.avatar.url, class: 'rounded-circle', width: 40, height: 40), "/profiles/#{@chat.sender_id}" %>&nbsp;
+            <%= link_to image_tag(@chat.receiver.avatar.url, class: 'rounded-circle', width: 40, height: 40), "/profiles/#{@chat.receiver_id}" %>&nbsp;
             <% if @chat.receiver.online? %>
               <i class="fa-solid fa-circle fa-beat-fade status-icon" style="color: #3ef308;"></i>
             <% end %>
